fixed the image slider crop on small screens

--- a/scss/_image-slider.scss
+++ b/scss/_image-slider.scss
@@ -10,6 +10,7 @@
 .slider {
     display: flex;
     aspect-ratio: 7/2; //1400 x 400px images
+    max-height: 80vh;
     overflow-x: auto; //hides the overflow images
     scroll-snap-type: x mandatory; //controls the slider at the bottom of the panel
     scroll-behavior: smooth;
@@ -19,6 +20,8 @@
         flex: 1 0 100%; //take up the whole container
         scroll-snap-align: start;
         object-fit: cover;
+        width: 100%;
+        height: 100%;
     }
 
     /* Remove scrollbar */
